add new release to perlhist

--- a/pod/perlhist.pod
+++ b/pod/perlhist.pod
@@ -681,6 +681,7 @@ the strings?).
  BinGOs    5.31.6       2019-Nov-20
  Nicolas R 5.31.7       2019-Dec-20
  Matthew H 5.31.8       2020-Jan-20
+ Renee     5.31.9       2020-Feb-20
 
 =head2 SELECTED RELEASE SIZES
 
