--- a/Porting/release_schedule.pod
+++ b/Porting/release_schedule.pod
@@ -16,7 +16,7 @@ deemed necessary by the Pumpking.
 Code freezes (which happen in the 5.31.X series)
 
   2020-01-20  5.31.8 ✓        Contentious changes freeze
-  2020-02-20  5.31.9          User-visible changes to correctly
+  2020-02-20  5.31.9 ✓        User-visible changes to correctly
                               functioning programs freeze
   2020-03-20  5.31.10         Full code freeze
   2020-04-20  5.32.0          Stable release!
@@ -65,7 +65,7 @@ you should reset the version numbers to the next blead series.
   2019-11-20  5.31.6 ✓       BinGOs
   2019-12-20  5.31.7 ✓       Atoomic
   2020-01-20  5.31.8 ✓       Matthew Horsfall
-  2020-02-20  5.31.9         Renee Backer
+  2020-02-20  5.31.9 ✓       Renee Bäcker
   2020-03-20  5.31.10        Sawyer X
 
 (RC0 for 5.32.0 will be released once we think that all the blockers have been
