Allow wildcard pattern debugging
This fixes #17026

Patterns can have subpatterns since 5.30.  These are processed when
encountered, by suspending the main pattern compilation, compiling the
subpattern, and then matching that against the set of all legal
possibilities, which Perl knows about.

Debugging info for the compilation portion of the subpattern was added
by be8790133a0ce8fc67454e55e7849a47a0858d32, without fanfare.  But,
prior to this new commit, debugging info was not available for that
matching portion of the compilation, except under DEBUGGING builds, with
-Drv.  This commit adds a new option to 'use re qw(Debug ...)',
WILDCARD, to enable subpattern match debugging.  Whatever other match
debugging options have been turned on will show up when a wildcard
subpattern is compiled iff WILDCARD is specified.

The output of this may be voluminous, which is why you have to ask for
it specifically.  Or, the EXTRA option turns it on, along with several
other things.

--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -363,7 +363,11 @@ files in F<ext/> and F<lib/> are best summarized in L</Modules and Pragmata>.
 
 =item *
 
-XXX
+Regular expression debugging information available through the C<re>
+module now works when compiling Unicode property wildcard subpatterns.
+See L<perlunicode/Wildcards in Property Values>.  Some potentially
+voluminous output requires a new option, WILDCARD, to be specified to
+enable.  See L<re/WILDCARD>.
 
 =back
 
