--- a/Porting/release_managers_guide.pod
+++ b/Porting/release_managers_guide.pod
@@ -758,7 +758,7 @@ formatting, e.g.
     $ ./perl -Ilib ext/Pod-Html/bin/pod2html pod/perldelta.pod > \
         ~/perldelta.html
 
-You can add pod links for GitHub issue references thusly:
+You should add pod links for GitHub issue references thusly:
 
     $ perl -p -i -e'BEGIN{undef $/}; s{(GH\s+#)(\d+)}{L<$1$2|https://github.com/Perl/perl5/issues/$2>}mg' pod/perldelta.pod
 
