--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -110,9 +110,32 @@ trigger "EVAL without pos change exceeded limit in regex".
 
 =head1 Acknowledgements
 
-XXX Generate this with:
+Perl 5.30.2 represents approximately 4 months of development since Perl 5.30.1
+and contains approximately 2,100 lines of changes across 110 files from 15
+authors.
 
-  perl Porting/acknowledgements.pl v5.30.1..HEAD
+Excluding auto-generated files, documentation and release tools, there were
+approximately 980 lines of changes to 34 .pm, .t, .c and .h files.
+
+Perl continues to flourish into its fourth decade thanks to a vibrant community
+of users and developers.  The following people are known to have contributed
+the improvements that became Perl 5.30.2:
+
+Chris 'BinGOs' Williams, Dan Book, David Mitchell, Hugo van der Sanden, Karen
+Etheridge, Karl Williamson, Matthew Horsfall, Nicolas R., Petr Písař, Renee
+Baecker, Sawyer X, Steve Hay, Tomasz Konojacki, Tony Cook, Yves Orton.
+
+The list above is almost certainly incomplete as it is automatically generated
+from version control history.  In particular, it does not include the names of
+the (very much appreciated) contributors who reported issues to the Perl bug
+tracker.
+
+Many of the changes included in this version originated in the CPAN modules
+included in Perl's core.  We're grateful to the entire CPAN community for
+helping Perl to flourish.
+
+For a more complete list of all of Perl's historical contributors, please see
+the F<AUTHORS> file in the Perl source distribution.
 
 =head1 Reporting Bugs
 
