--- a/pod/perlhist.pod
+++ b/pod/perlhist.pod
@@ -672,6 +672,7 @@ the strings?).
  Steve     5.30.1-RC1   2019-Oct-27
  Steve     5.30.1       2019-Nov-10
  Steve     5.30.2-RC1   2020-Feb-29
+ Steve     5.30.2       2020-Mar-14
 
  Sawyer X  5.31.0       2019-May-24     The 5.31 development track
  Ether     5.31.1       2019-Jun-20
