--- a/pod/perlhist.pod
+++ b/pod/perlhist.pod
@@ -684,6 +684,7 @@ the strings?).
  Nicolas R 5.31.7       2019-Dec-20
  Matthew H 5.31.8       2020-Jan-20
  Renee     5.31.9       2020-Feb-20
+ Sawyer X  5.31.10      2020-Mar-20
 
 =head2 SELECTED RELEASE SIZES
 
