Add my epigraph, minus link
(cherry picked from commit c3aea60432d9deca9ad0870e6071027c514eed63)

--- a/Porting/epigraphs.pod
+++ b/Porting/epigraphs.pod
@@ -17,9 +17,26 @@ Consult your favorite dictionary for details.
 
 =head1 EPIGRAPHS
 
+=head2 v5.31.10 - Christina Rossetti, "Remember"
+
+    Remember me when I am gone away,
+        Gone far away into the silent land;
+        When you can no more hold me by the hand,
+    Nor I half turn to go yet turning stay.
+    Remember me when no more day by day
+        You tell me of our future that you plann'd:
+        Only remember me; you understand
+    It will be late to counsel then or pray.
+    Yet if you should forget me for a while
+        And afterwards remember, do not grieve:
+        For if the darkness and corruption leave
+        A vestige of the thoughts that once I had,
+    Better by far you should forget and smile
+        Than that you should remember and be sad.
+
 =head2 v5.31.9 - Sten Nadolny, book The Discovery of Slowness
 
-L<Announced on 2020-01-20 by Renee Bäcker|https://www.nntp.perl.org/group/perl.perl5.porters/2020/02/msg257144.html>
+L<Announced on 2020-02-20 by Renee Bäcker|https://www.nntp.perl.org/group/perl.perl5.porters/2020/02/msg257144.html>
 
   „When people talk too fast the content becomes as superfluous as the speed.“
 
