Add Atsushi Sugawara to AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -130,6 +130,7 @@ Artur Bergman                  <artur@contiller.se>
 Arvan                          <apritchard@zeus.com>
 Ash Berlin                     <ash@cpan.org>
 Ask Bjørn Hansen               <ask@develooper.com>
+Atsushi Sugawara               <peanutsjamjam@gmail.com>
 Audrey Tang                    <cpan@audreyt.org>
 Augustina Blair                <auggy@cpan.org>
 Axel Boldt
